--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
+<html>
+   <head><title>thefirstwebsiteofmylife</title></head>
+   <body>
+       <h1>Welcome to my homepage</h1>
+       <p>This is my first paragraph</p>
+   </body>
+</html>
 
