--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-   <head><title>thefirstwebsiteofmylife</title></head>
+   <head><title>This is the first website of my life</title></head>
    <body>
        <h1>Welcome to my homepage</h1>
        <p>This is my first paragraph</p>
