--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
    <body>
        <h1>Welcome to my homepage</h1>
        <p>This is my first paragraph</p>
-       <a href="www.rmit.edu.vn">My university website</a>
+       <a href="https://www.rmit.edu.vn">My university website</a>
    </body>
 </html>
 
