--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
 <html>
-   <head><title>This is the first website of my life</title></head>
+   <head>
+    <title>My website|Kim</title>
+    
+</head>
    <body>
-       <h1>Welcome to my homepage</h1>
-       <p>This is my first paragraph</p>
+       
+       <h1 style= "Background-color: DodgerBlue; font-family: 'Courier New', Courier, monospace; text-align: center;"> Welcome to my homepage</h1>
+       <p style="font-size: large; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; text-align: center; color: rgb(206, 3, 225);">This is my first paragraph</p>
+       <p style="color: Tomato ;"> Hello world</p>
+       <p style="font-size:50px;"><p style="background-color: rgb(225, 1, 23); color: bisque;"> I was here for a long time</p>
+       <p style="color: rgb(225, 0, 255);"> Hi my name is Kim </p>
        <a href="https://www.rmit.edu.vn">My university website</a>
+       <br>
+       <img src="https://lh3.googleusercontent.com/p/AF1QipM94mpQ1tUuLB0xGTqG9yISZI95VsZOEGtavZw=s680-w680-h510" alt="RMIT">
    </body>
+   
 </html>
 
