--- a/index.html
+++ b/index.html
@@ -6,13 +6,25 @@
    <body>
        
        <h1 style= "Background-color: DodgerBlue; font-family: 'Courier New', Courier, monospace; text-align: center;"> Welcome to my homepage</h1>
-       <p style="font-size: large; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; text-align: center; color: rgb(206, 3, 225);">This is my first paragraph</p>
+       <p style="font-size: large; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; text-align: center; color: rgb(30, 155, 204);">This is my first paragraph</p>
        <p style="color: Tomato ;"> Hello world</p>
        <p style="font-size:50px;"><p style="background-color: rgb(225, 1, 23); color: bisque;"> I was here for a long time</p>
        <p style="color: rgb(225, 0, 255);"> Hi my name is Kim </p>
        <a href="https://www.rmit.edu.vn">My university website</a>
        <br>
-       <img src="https://lh3.googleusercontent.com/p/AF1QipM94mpQ1tUuLB0xGTqG9yISZI95VsZOEGtavZw=s680-w680-h510" alt="RMIT">
+       <img src="https://lh3.googleusercontent.com/p/AF1QipM94mpQ1tUuLB0xGTqG9yISZI95VsZOEGtavZw=s680-w680-h510" alt="RMIT" style="border: 10px solid rgb(226, 3, 221);">
+   </body>
+   <body>
+    <h1> Absolute URLs </h1>
+    <p><a href="https://www.w3.org/" target="_blank">W3C</a></p>
+    <p><a href="https://www.google.com/" target="_top">Google</a></p>
+
+    <h2>Relative URLs</h2>
+    <p><a href="html_images.asp">HTML Images</a></p>
+    <p><a href="/css/default.asp">CSS Tutorial</a></p>
+   </body>
+   <body>
+    <h1 style="border: 2px solid rgb(0, 1, 226);"> Xin Chao</h1>
    </body>
    
 </html>
